# agent-builder

./: README.md  main.py  pyproject.toml
agents/: agent_runner.py
orchestrator/: orchestrator.py
projects/test_project_01/: state.json
projects/test_project_01/artifacts/: architecture.json  be_code.json  design.json  fe_code.json  requirements.json
roles/: ba.md  be_dev.md  data_engineer.md  designer.md  developer_be.md  fe_dev.md  teamlead.md  tester.md
rules/: global.md
tasks/: task.md
utils/: prompt_builder.py
